@@ -10,6 +10,8 @@ Changes in @NEW@:
   o Bug Fixes:
 
   o Internal Changes:
+    * Tests for 'group-' in a name now check for :, ensuring that the
+      check doesn't match a group component.
 
 Changes in 2.1.15:
   o New Features:
